--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -15,6 +15,48 @@
         android:theme="@style/Theme.IDUNSA_APP"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".equipo.EquipoAddActivity"
+            android:exported="false" />
+        <activity
+            android:name=".reglamento.ReglamentoHomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".torneo.TorneoHomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".torneo.TorneoEditActivity"
+            android:exported="false" />
+        <activity
+            android:name=".torneo.TorneoAddActivity"
+            android:exported="false" />
+        <activity
+            android:name=".evento.EventHomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".evento.EventEdit"
+            android:exported="false" />
+        <activity
+            android:name=".evento.EventAdd"
+            android:exported="false" />
+        <activity
+            android:name=".evento.EventsNewActivityAdmin"
+            android:exported="false" />
+        <activity
+            android:name=".inicio.HomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".inicio.RegistroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".inicio.LoginActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
